add sample2
